Testing git user error

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Hello Coursera</h1>
-
+    <H5>Restarted the course to a new branch.   I think I need a training course on GIT</H5>
+    <h6>Seriously having GIT user issues</h6>
   </body>
 </html>
