next version of file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hello Coursera</h1>
+    <h1>Hello Coursera- Git!!</h1>
     <H5>Restarted the course to a new branch.   I think I need a training course on GIT</H5>
     <h6>Seriously having GIT user issues</h6>
   </body>
