--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello Coursera</title>
-  </head>
-  <body>
-    <h1>Hello Coursera- Git!!</h1>
-    <H5>Restarted the course to a new branch.   I think I need a training course on GIT</H5>
-    <h6>Seriously having GIT user issues</h6>
-  </body>
+<html ng-app="myFirstApp">
+
+<head>
+  <meta charset="utf-8">
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
+  <title>My First Angular JS App!</title>
+</head>
+<body>
+  <<div ng-controller="MyFirstController">
+
+    </div>
+
+</body>
+
 </html>
