--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>My First Angular JS App!</title>
 </head>
 <body>
-  <<div ng-controller="MyFirstController">
-
+  <h1>My First Angular JS App!</h1>
+  <div ng-controller="MyFirstController">
+    <input type="text" ng-model="name" />
+    Inside my input is:  {{name}}
     </div>
 
 </body>
