--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
   <meta charset="utf-8">
   <script src="angular.min.js"></script>
   <script src="app.js"></script>
-  <style>body { font-size: 1.3em;  }</style>
+  <style>body { font-size: 1.3em; }</style>
   <title>Name Calculator</title>
 </head>
 <body ng-app="NameCalculator">
   <h1>Angular JS Name Calculator</h1>
+
+  <div id="target" ng-app="myTestApp">
+    <section>Section 1
+    <article>
+      Article 1
+    </article>
+  </section>
+</div>
+<script>
+//var elem = document.getElementById('target');
+//console.log(elem);
+//console.log(elem.getAttribute('ng-app'));
+var elem2 = document.querySelector("[ng-app]");
+console.log(elem2);
+console.log(elem2.getAttribute(;ng-app));
+</script>
+
   <div ng-controller="NameCalculatorController">
       <div>
       Your Name:
