--- a/index.html
+++ b/index.html
@@ -5,35 +5,25 @@
   <script src="angular.min.js"></script>
   <script src="app.js"></script>
   <style>body { font-size: 1.3em; }</style>
-  <title>Name Calculator</title>
+  <title>Module1-Solution</title>
 </head>
-<body ng-app="NameCalculator">
-  <h1>Angular JS Name Calculator</h1>
+<body ng-app="whatsForLunch">
+  <h1>Check if Too Much For Lunch Assignment</h1>
 
-  <div id="target" ng-app="myTestApp">
-    <section>Section 1
-    <article>
-      Article 1
-    </article>
-  </section>
+  <div id="target" ng-app="whatsForLunch">
+  <div ng-controller='MsgController'>
+    {{lunch}}What's for lunch? <br />
+    {{userInput}}
+  </div>
 </div>
-<script>
-//var elem = document.getElementById('target');
-//console.log(elem);
-//console.log(elem.getAttribute('ng-app'));
-var elem2 = document.querySelector("[ng-app]");
-console.log(elem2);
-console.log(elem2.getAttribute(;ng-app));
-</script>
+<button ng-click="sayMessage"()>"Check If Too Much"</button> <br />
 
-  <div ng-controller="NameCalculatorController">
+
+  <div ng-controller="">
       <div>
-      Your Name:
-      <input type="text"
-       ng-model="name"
-       ng-keyup="displayNumeric();">
+
     </div>
-    <div>Total Numberic Value of a Person's Name is:
+    <div>T
       {{totalValue}}</div>
   </div>
 </body>
